# rubar

./: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/rubar-core/: Cargo.toml  README.md
crates/rubar-core/src/: error.rs  geometry.rs  gs1.rs  lib.rs  symbol.rs  unit.rs
crates/rubar-core/src/encode/: datamatrix.rs  mod.rs  qr.rs  upc_a.rs
crates/rubar-core/src/render/: png.rs  svg.rs
crates/rubar-py/: Cargo.toml
crates/rubar-py/src/: lib.rs
examples/: README.md  generate_examples.py
python/rubar/: __init__.py  __init__.pyi
python/tests/: test_code128.py  test_code39.py  test_datamatrix.py  test_ean8.py  test_itf.py  test_qr.py  test_upc_a.py
src/: error.rs  geometry.rs  lib.rs  symbol.rs
src/encode/: code128.rs  code39.rs  ean8.rs  itf.rs  mod.rs  qr.rs
src/render/: mod.rs  png.rs
