[workspace]
members = ["crates/rubar-core", "crates/rubar-py"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stringking/rubar"

[workspace.dependencies]
rubar-core = { path = "crates/rubar-core", version = "0.1.0" }
thiserror = "1.0"
barcoders = "2.0.0"
qrcode = "0.14.1"
tiny-skia = "0.11"
datamatrix = "0.3.2"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
