[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rubar"
version = "0.1.0"
description = "Fast barcode encoding and rendering with exact module-level geometry"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Printing",
]

[project.urls]
Repository = "https://github.com/stringking/rubar"
Issues = "https://github.com/stringking/rubar/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rubar._rubar"
manifest-path = "crates/rubar-py/Cargo.toml"
